GPv3+GeoNode: Cannot move Node(s) in Geo Node Editor in 'Edit Mode' #117989

Closed
opened 2024-02-08 14:03:49 +01:00 by luckyrobster · 1 comment

System Information
Operating system: Linux-6.5.0-14-generic-x86_64-with-glibc2.38 64 Bits, X11 UI
Graphics card: NVIDIA GeForce GTX 1060/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 525.147.05

Blender Version
Broken: version: 4.2.0 Alpha, branch: main, commit date: 2024-02-07 23:12, hash: 412b279629af
Worked: N/A

Short description of error
Using GPv3 with Geo Node, the node(s) can't move (although scaling them away makes an effect on moving in the window) in Geo Node Editor while in 'Edit Mode' only for Grease Pencil - works in other modes, however.

Exact steps for others to reproduce the error

  1. Insert a blank Grease Pencil (v3) object
  2. Draw something
  3. Go to Edit Mode
  4. Open Geometry Node Editor and make a new one
  5. Try select the nodes and move them away from each other
**System Information** Operating system: Linux-6.5.0-14-generic-x86_64-with-glibc2.38 64 Bits, X11 UI Graphics card: NVIDIA GeForce GTX 1060/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 525.147.05 **Blender Version** Broken: version: 4.2.0 Alpha, branch: main, commit date: 2024-02-07 23:12, hash: `412b279629af` Worked: N/A **Short description of error** Using GPv3 with Geo Node, the node(s) can't move (although scaling them away makes an effect on moving in the window) in Geo Node Editor while in 'Edit Mode' *only* for Grease Pencil - works in other modes, however. **Exact steps for others to reproduce the error** 1. Insert a blank Grease Pencil (v3) object 2. Draw something 3. Go to Edit Mode 4. Open Geometry Node Editor and make a new one 5. Try select the nodes and move them away from each other
luckyrobster added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2024-02-08 14:03:50 +01:00
luckyrobster changed title from GPv3+GeoNode: to GPv3+GeoNode: Cannot move Node(s) in Geo Node Editor 2024-02-08 14:04:29 +01:00
luckyrobster changed title from GPv3+GeoNode: Cannot move Node(s) in Geo Node Editor to GPv3+GeoNode: Cannot move Node(s) in Geo Node Editor in 'Edit Mode' 2024-02-08 14:04:46 +01:00
Member

There are a couple of places in the transform system that react to CTX_GPENCIL_STROKES that should additionally check for SPACE_VIEW3D, got a fix, will post shortly

There are a couple of places in the transform system that react to `CTX_GPENCIL_STROKES` that should additionally check for `SPACE_VIEW3D`, got a fix, will post shortly
Philipp Oeser self-assigned this 2024-02-09 14:16:25 +01:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-02-09 15:11:46 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#117989
No description provided.